--- a/1.html
+++ b/1.html
@@ -7,8 +7,8 @@
 <body>
   <h1><a href="index.html">Web</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a><BR></li>
-  <li><a href="2.html">CSS</a><BR></li>
+  <li><a href="1.html">HTML</a><br></li>
+  <li><a href="2.html">CSS</a><br></li>
   <li><a href="3.html">JavaScript</a><br></li>
 </ol>
 <h1>HTML</h1>
