--- a/2.html
+++ b/2.html
@@ -1,17 +1,29 @@
 <!doctype html>
 <html>
 <head>
-<title>hk html</title>
-<meta charset="utf-8">
+ <title>hk html</title>
+ <meta charset="utf-8">
+ <style>
+  #active {color:red;}
+  .saw {color:gray;}
+  a {color:black;
+  text-decoration:none;}
+  h1 {border-bottom:1px gray solid;
+  margin:0px; padding:20px;
+  text-align:center; font-size:40px;}
+  ol{border-right:1px,solid,gray; width:100px;
+  margin:0px; padding:20px;}
+  body {margin:0px;}
+ </style>
 </head>
 <body>
-  <h1><a href="index.html">Web</a></h1>
+<h1><a href="index.html">Web</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a><br></li>
-  <li><a href="2.html">CSS</a><br></li>
-  <li><a href="3.html">JavaScript</a><br></li>
+ <li><a href="1.html" class="saw">HTML</a></li>
+ <li><a href="2.html" class="saw" id="active">CSS</a></li>
+ <li><a href="3.html">JavaScript</a></li>
 </ol>
-<h1>CSS</h1>
+<h2>CSS</h2>
 <p>Cascading Style Sheets (CSS) is a style sheet language used for describing
   the presentation of a document written in a markup language. Although most
   often used to set the visual style of web pages and user interfaces written
@@ -21,3 +33,4 @@
    by most websites to create visually engaging webpages, user interfaces for
    web applications, and user interfaces for many mobile applications.</p>
 </body>
+</html>
